[package]
name = "pycabe"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
license = "MIT"

[dependencies]
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "0.11.10" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "0.11.10" }
ignore = "0.4.23"
